# old

./: .gitignore  anthropic_batch.py  chunk_all_laws.py  pyproject.toml  scrape_all_laws.py  utils.py
